--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.9.0",
   "type": "module",
   "description": "QSP code in WASM",
-  "main": "./dist/node/wasm-engine.cjs",        
+  "main": "./dist/node/wasm-engine.cjs",
   "module": "./dist/node/wasm-engine.esm.js",
   "exports": {
-		".": "./dist/node/wasm-engine.esm.js",
-		"./web": "./dist/web/wasm-engine.modern.js" 
-	},
+    ".": "./dist/node/wasm-engine.esm.js",
+    "./web": "./dist/web/wasm-engine.modern.js"
+  },
   "scripts": {
     "prebuild": "rimraf ./dist && mkdir dist && cp ./src/qsplib/public/qsp-engine.wasm ./dist/qsp-engine.wasm",
     "build": "npm run build:node && npm run build:web",
     "build:node": "microbundle --target=node -i src/qsp-engine-node.ts -o dist/node --format=esm,cjs",
     "build:web": "microbundle --target=web -i src/qsp-engine-browser.ts -o dist/web --format=modern",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "qsp",
@@ -24,13 +24,16 @@
   "license": "MIT",
   "devDependencies": {
     "@types/emscripten": "^1.39.6",
+    "@types/jest": "^28.1.6",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
     "eslint": "^8.19.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^28.1.3",
     "microbundle": "^0.15.0",
     "prettier": "2.7.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
 }
