--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@qsp/wasm-engine",
-  "version": "0.9.0",
+  "version": "0.0.0",
   "type": "module",
   "description": "QSP code in WASM",
   "main": "./dist/node/wasm-engine.cjs",
@@ -9,19 +9,32 @@
     ".": "./dist/node/wasm-engine.esm.js",
     "./web": "./dist/web/wasm-engine.modern.js"
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "prebuild": "rimraf ./dist && mkdir dist && cp ./src/qsplib/public/qsp-engine.wasm ./dist/qsp-engine.wasm",
     "build": "npm run build:node && npm run build:web",
     "build:node": "microbundle --target=node -i src/qsp-engine-node.ts -o dist/node --format=esm,cjs",
     "build:web": "microbundle --target=web -i src/qsp-engine-browser.ts -o dist/web --format=modern",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --no-cache"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --no-cache",
+    "prepublish": "npm run build",
+    "release": "np"
   },
   "keywords": [
     "qsp",
     "wasm"
   ],
-  "author": "Sergii Kostyrko",
+  "author": "Sergii Kostyrko <srg.kostyrko@gmail.com>",
   "license": "MIT",
+  "homepage": "https://github.com/QSPFoundation/qsp-wasm-engine#readme",
+  "bugs": {
+    "url": "https://github.com/QSPFoundation/qsp-wasm-engine/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/QSPFoundation/qsp-wasm-engine.git"
+  },
   "devDependencies": {
     "@qsp/converters": "^1.0.1",
     "@types/emscripten": "^1.39.6",
@@ -32,9 +45,16 @@
     "eslint-config-prettier": "^8.5.0",
     "jest": "^28.1.3",
     "microbundle": "^0.15.0",
+    "np": "^7.6.2",
     "prettier": "2.7.1",
     "rimraf": "^3.0.2",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
-  }
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "np": {
+		"yarn": false
+	}
 }
