--- a/src/qsplib/CMakeLists.txt
+++ b/src/qsplib/CMakeLists.txt
@@ -18,7 +18,7 @@ file(GLOB SOURCES src/*.c)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_SOURCE_DIR}/public")
 
 add_executable(qsp-engine ${SOURCES})
-target_include_directories(qsp-engine PRIVATE "${CMAKE_BINARY_DIR}/qsp-src" "${CMAKE_BINARY_DIR}/oniguruma-src")
+target_include_directories(qsp-engine PRIVATE "${CMAKE_BINARY_DIR}/qsp-src" "${CMAKE_BINARY_DIR}/oniguruma-src" "${CMAKE_BINARY_DIR}/qsp-build")
 target_link_libraries(qsp-engine PRIVATE qsp onig)
 
 set_target_properties(qsp-engine PROPERTIES LINK_FLAGS "-Wno-parentheses \
