--- a/package.json
+++ b/package.json
@@ -39,18 +39,18 @@
   "devDependencies": {
     "@qsp/converters": "^1.0.1",
     "@types/emscripten": "^1.39.6",
-    "@types/jest": "^28.1.6",
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^8.19.0",
-    "eslint-config-prettier": "^8.5.0",
-    "jest": "^28.1.3",
-    "microbundle": "^0.15.0",
-    "np": "^7.6.2",
-    "prettier": "2.7.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^28.0.7",
-    "typescript": "^4.7.4"
+    "@types/jest": "^29.5.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "jest": "^29.5.0",
+    "microbundle": "^0.15.1",
+    "np": "^7.7.0",
+    "prettier": "^2.8.7",
+    "rimraf": "^5.0.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   },
   "publishConfig": {
     "access": "public"
