--- a/package.json
+++ b/package.json
@@ -39,25 +39,28 @@
   },
   "devDependencies": {
     "@qsp/converters": "^1.0.1",
-    "@types/emscripten": "^1.39.6",
-    "@types/jest": "^29.5.1",
-    "@types/responselike": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
-    "eslint": "^8.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "jest": "^29.5.0",
+    "@types/emscripten": "^1.39.10",
+    "@types/jest": "^29.5.11",
+    "@types/responselike": "^1.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "microbundle": "^0.15.1",
     "np": "^7.7.0",
-    "prettier": "^2.8.7",
-    "rimraf": "^5.0.0",
-    "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "prettier": "^3.1.1",
+    "rimraf": "^5.0.5",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.3.3"
   },
   "publishConfig": {
     "access": "public"
   },
   "np": {
     "yarn": false
+  },
+  "dependencies": {
+    "tslib": "^2.6.2"
   }
 }
