--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "prebuild": "rimraf ./dist && mkdir dist && cp ./src/qsplib/public/qsp-engine.wasm ./dist/qsp-engine.wasm",
     "build": "microbundle",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --no-cache",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "prepublish": "npm run build",
     "release": "np",
     "lint": "eslint . && tsc --noEmit"
@@ -40,19 +41,17 @@
   "devDependencies": {
     "@qsp/converters": "^1.0.1",
     "@types/emscripten": "^1.39.10",
-    "@types/jest": "^29.5.11",
     "@types/responselike": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "jest": "^29.7.0",
     "microbundle": "^0.15.1",
     "np": "^7.7.0",
     "prettier": "^3.1.1",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
   },
   "publishConfig": {
     "access": "public"
