--- a/package.json
+++ b/package.json
@@ -39,18 +39,19 @@
     "url": "https://github.com/QSPFoundation/qsp-wasm-engine.git"
   },
   "devDependencies": {
+    "@eslint/js": "^9.7.0",
     "@qsp/converters": "^1.0.1",
     "@types/emscripten": "^1.39.13",
+    "@types/eslint__js": "^8.42.3",
     "@types/responselike": "^1.0.3",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
+    "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
     "microbundle": "^0.15.1",
     "np": "^9.2.0",
     "prettier": "3.3.3",
     "rimraf": "^6.0.1",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.0-alpha.54",
     "vitest": "^2.0.4"
   },
   "publishConfig": {
