--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "source": "src/index.ts",
   "main": "./dist/wasm-engine.cjs",
   "module": "./dist/wasm-engine.modern.js",
-  "unpkg": "./dist/wasm-engine.umd.js",
   "exports": {
     ".": "./dist/wasm-engine.modern.js",
-    "./wasm-engine-debug": "./dist/wasm-engine-debug.modern.js",
+    "./wasm-engine-debug": "./dist/wasm-engine-debug.cjs",
+    "./wasm-engine-debug.es": "./dist/wasm-engine-debug.modern.js",
     "./qsp-engine.wasm": "./dist/qsp-engine.wasm",
     "./qsp-engine-debug.wasm": "./dist/qsp-engine-debug.wasm"
   },
@@ -18,8 +18,8 @@
     "dist"
   ],
   "scripts": {
-    "prebuild": "rimraf ./dist && mkdir dist && cp ./src/qsplib/public/qsp-engine.wasm ./dist/qsp-engine.wasm && cp ./src/qsplib/public/qsp-engine-debug.wasm ./dist/qsp-engine-debug.wasm",
-    "build": "microbundle",
+    "prebuild": "rimraf ./dist",
+    "build": "rollup -c",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:debug": "DEBUG=1 vitest run",
@@ -44,15 +44,19 @@
   "devDependencies": {
     "@eslint/js": "^9.7.0",
     "@qsp/converters": "^1.0.1",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/emscripten": "^1.39.13",
     "@types/eslint__js": "^8.42.3",
     "@types/responselike": "^1.0.3",
     "eslint": "^9.7.0",
     "eslint-config-prettier": "^9.1.0",
-    "microbundle": "^0.15.1",
     "np": "^10.0.7",
     "prettier": "3.3.3",
     "rimraf": "^6.0.1",
+    "rollup": "^4.20.0",
+    "rollup-plugin-copy": "^3.5.0",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0-alpha.54",
     "vitest": "^2.0.4"
