--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "url": "https://github.com/QSPFoundation/qsp-wasm-engine.git"
   },
   "devDependencies": {
-    "@eslint/js": "^9.7.0",
+    "@eslint/js": "^9.8.0",
     "@qsp/converters": "^1.0.1",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
@@ -50,7 +50,7 @@
     "@types/emscripten": "^1.39.13",
     "@types/eslint__js": "^8.42.3",
     "@types/responselike": "^1.0.3",
-    "eslint": "^9.7.0",
+    "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.1.0",
     "np": "^10.0.7",
     "prettier": "3.3.3",
@@ -58,8 +58,8 @@
     "rollup": "^4.20.0",
     "rollup-plugin-copy": "^3.5.0",
     "typescript": "^5.5.4",
-    "typescript-eslint": "^8.0.0-alpha.54",
-    "vitest": "^2.0.4"
+    "typescript-eslint": "^8.0.0",
+    "vitest": "^2.0.5"
   },
   "publishConfig": {
     "access": "public"
