--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,6 @@ jobs:
         with:
           node-version: '20.x'
       - run: npm ci
+      - run: npm run lint
+      - run: npm run check-types
       - run: npm run test:debug
